--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,41 +1,21 @@
 <footer class="site-footer row">
-
-  <div class="wrapper">
-
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+    <div class="wrapper">
+        <ul class="footer-links">
+    		<li>
+                  <a href="#">freedom of information</a>
+            </li>
+    		<li>
+                  <a href="#">site map</a>
+            </li>
+    		<li>
+                  <a href="#">feedback</a>
+            </li>
         </ul>
-      </div>
-
-      <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
-
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
-      </div>
     </div>
-
-  </div>
-
 </footer>
 <script src="{{ "/js/jquery.js " | prepend: site.baseurl }}"></script>
 <script src="{{ "/js/foundation.js " | prepend: site.baseurl }}"></script>
 <script src="{{ "/js/app.js" | prepend: site.baseurl }}"></script>
+<!--
+<script type="text/babel" src="{{ "/js/app-react.js" | prepend: site.baseurl }}"></script>
+-->
