--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,5 +10,7 @@
   <link rel="stylesheet" href="{{ "/css/app.css.map" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+  <script src="{{ "/js/react.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ "/js/react-dom.js" | prepend: site.baseurl }}"></script>
   <script src="{{ "/js/modernizr.js" | prepend: site.baseurl }}"></script>
 </head>
