--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,8 @@
-<header class="site-header">
+<header class="site-header show-for-medium-up">
     <div class="row site-header-inner">
-        <div class="clearfix">
+        <div class="site-header-top clearfix">
             <a class="site-logo left" href="{{ site.baseurl }}/" role="button" tabindex="0">
-                <img class="show-for-medium-up" src="{{ "/img/kc_logo.gif" | prepend: site.baseurl }}" />
-                <img class="show-for-small-only" src="{{ "/img/kc_logo_mobile.gif" | prepend: site.baseurl }}" />
+                <img src="{{ "/img/kc_logo.gif" | prepend: site.baseurl }}" />
             </a>
 
             <a class="site-logo-right right" href="{{ site.baseurl }}/">
@@ -12,36 +11,38 @@
         </div>
 
         <div class="row collapse">
-            <div class="column medium-3 medium-offset-9">
-                <form name="searchform" 
-                    method="get" 
-                    action="#" 
+            <div class="column medium-4 medium-offset-8">
+                <form name="searchform"
+                    method="get"
+                    action="#"
                     id="site-search"
-                    class="site-search row" 
+                    class="site-search row"
                     >
-
                     <div class="column small-10">
-                        <input name="textsearch" 
+                        <input name="textsearch"
                                type="text"
-                               placeholder="search" 
-                               value="" 
-                               title="Search Site" 
-                               accesskey="4" 
-                               id="searchGadget" 
+                               placeholder="search"
+                               value=""
+                               title="Search Site"
+                               accesskey="4"
+                               id="searchGadget"
                                class="search-text round">
                     </div>
 
                     <div class="column small-2">
-                        <button class="postfix" name="submit">
+                        <button name="submit">
                             <i class="icon-search">
                                 <span class="hide">Search</span>
                             </i>
                         </button>
                     </div>
+
                 </form>
             </div>
         </div>
 
+        <div class="row">
+        <div class="column">
         <nav class="top-bar" data-topbar role="navigation">
             <ul class="title-area">
                 <li class="name"></li>
@@ -53,70 +54,112 @@
             <section class="top-bar-section">
               <!-- Right Nav Section -->
                 <ul class="left">
-                    <li class="active has-dropdown">
+                    <li class="active">
                         <a href="#">Home</a>
-
-                        <ul class="dropdown">
-                            <li class="has-dropdown">
-                                <a href="#">Sliders</a>
-
-                                <ul class="dropdown">
-                                    <li>
-                                        <a href="#">Flex Slider</a>
-                                    </li>
-
-                                    <li>
-                                        <a href="#">Owl Slider</a>
-                                    </li>
-                                </ul>
-                            </li>
-
-                            <li class="has-dropdown">
-                                <a href="#">Widgets</a>
-
-                                <ul class="dropdown">
-                                    <li>
-                                        <a href="#">Links</a>
-                                    </li>
-
-                                    <li class="active">
-                                        <a href="#">Carousel</a>
-                                    </li>
-
-                                    <li>
-                                        <a href="#">Social Icons</a>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
                     </li>
 
-                    <li class="has-dropdown">
+                    <li>
                         <a href="#">About Keble</a>
-
-                        <ul class="dropdown">
-                            <li>
-                                <a href="#">Left Sidebar</a>
-                            </li>
-
-                            <li class="active">
-                                <a href="#">Right Sidebar</a>
-                            </li>
-                        </ul>
                     </li>
 
-                    <li class="has-dropdown">
+                    <li>
                         <a href="#">Prospective Students</a>
+                    </li>
 
-                        <ul class="dropdown">
-                            <li>
-                                <a href="#">Tabs</a>
-                            </li>
-                        </ul>
+                    <li>
+                        <a href="#">Current Students</a>
+                    </li>
+
+                    <li>
+                        <a href="#">Teaching &amp; Research</a>
+                    </li>
+
+                    <li>
+                        <a href="#">Alumni</a>
+                    </li>
+
+                    <li>
+                        <a href="#">2020 Campaign</a>
+                    </li>
+
+                    <li>
+                        <a href="#">Conferences</a>
+                    </li>
+
+                    <li>
+                        <a href="#">Bed &amp; Breakfast</a>
                     </li>
                 </ul>
+
+                <a class="item top-menu-icon right-off-canvas-toggle"
+                   href="#"
+                   role="button" tabindex="3">
+                        <i class="icon-menu">
+                            <span class="hide">menu</span>
+                        </i>
+                </a>
             </section>
         </nav>
+        </div>
+        </div>
     </div>
 </header>
 
+<header class="site-header-mobile show-for-small-only">
+    <div class="site-header-mobile-top">
+        <a class="site-logo" href="{{ site.baseurl }}/" role="button" tabindex="0">
+            <img class="site-logo-keble" src="{{ "/img/kc_logo_mobile.gif" }}" />
+            <img class="site-logo-oxford" src="{{ "/img/oxford_emblem_mobile.gif" }}" />
+        </a>
+
+        <div class="top-icons right">
+        <div class="icon-bar two-up right">
+            <a class="item top-search-icon"
+               id="top-search-icon"
+               href="#"
+               role="button" tabindex="2"
+               data-drop-reveal
+               data-drop-reveal-target="#mobile-site-search">
+                    <i class="icon-search">
+                        <span class="hide">open search</span>
+                    </i>
+            </a>
+
+            <a class="item top-menu-icon right-off-canvas-toggle"
+               href="#"
+               role="button" tabindex="3">
+                    <i class="icon-menu">
+                        <span class="hide">menu</span>
+                    </i>
+            </a>
+        </div>
+        </div>
+
+    </div>
+
+            <form name="searchform row"
+                method="get"
+                action="#"
+                id="mobile-site-search"
+                class="site-search row"
+                >
+                <div class="column small-10">
+                    <input name="textsearch"
+                           type="text"
+                           placeholder="search"
+                           value=""
+                           title="Search Site"
+                           accesskey="4"
+                           id="searchGadget"
+                           class="search-text round">
+                </div>
+
+                <div class="column small-2">
+                    <button name="submit" class="postfix">
+                        <i class="icon-search">
+                            <span class="hide">Search</span>
+                        </i>
+                    </button>
+                </div>
+            </form>
+</header>
