Temporarily remove react stuff.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,6 +16,6 @@
 <script src="{{ "/js/jquery.js " | prepend: site.baseurl }}"></script>
 <script src="{{ "/js/foundation.js " | prepend: site.baseurl }}"></script>
 <script src="{{ "/js/app.js" | prepend: site.baseurl }}"></script>
-<!--
+{% comment %}
 <script type="text/babel" src="{{ "/js/app-react.js" | prepend: site.baseurl }}"></script>
--->
+{% endcomment %}
