Change to site.url

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,9 +13,9 @@
         </ul>
     </div>
 </footer>
-<script src="{{ site.baseurl }}/js/jquery.js"></script>
-<script src="{{ site.baseurl }}/js/foundation.js"></script>
-<script src="{{ site.baseurl }}/js/app.js"></script>
+<script src="{{ site.url }}/js/jquery.js"></script>
+<script src="{{ site.url }}/js/foundation.js"></script>
+<script src="{{ site.url }}/js/app.js"></script>
 {% comment %}
 <script type="text/babel" src="{{ "/js/app-react.js" | prepend: site.baseurl }}"></script>
 {% endcomment %}
