--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,13 +6,13 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/app.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/app.css.map">
+  <link rel="stylesheet" href="{{ site.github.url }}/css/app.css">
+  <link rel="stylesheet" href="{{ site.github.url }}/css/app.css.map">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
   {% comment %}
-  <script src="{{ "/js/react.js" | prepend: site.url }}"></script>
-  <script src="{{ "/js/react-dom.js" | prepend: site.url }}"></script>
+  <script src="{{ "/js/react.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ "/js/react-dom.js" | prepend: site.baseurl }}"></script>
   {% endcomment %}
-  <script src="{{ site.url }}/js/modernizr.js"></script>
+  <script src="{{ site.github.url }}/js/modernizr.js"></script>
 </head>
