Use site.baseurl throughout.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,5 +14,5 @@
   <script src="{{ "/js/react.js" | prepend: site.baseurl }}"></script>
   <script src="{{ "/js/react-dom.js" | prepend: site.baseurl }}"></script>
   {% endcomment %}
-  <script src="{{ site.github.url }}/js/modernizr.js"></script>
+  <script src="{{ sitebase.url }}/js/modernizr.js"></script>
 </head>
