Changes to intermediate viewport menu icon position.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
                     id="site-search"
                     class="site-search row"
                     >
-                    <div class="column small-10">
+                    <div class="column small-9">
                         <input name="textsearch"
                                type="text"
                                placeholder="search"
@@ -29,12 +29,20 @@
                                class="search-text round">
                     </div>
 
-                    <div class="column small-2">
+                    <div class="column small-3">
                         <button name="submit">
                             <i class="icon-search">
                                 <span class="hide">Search</span>
                             </i>
                         </button>
+
+                        <a class="item top-menu-icon right-off-canvas-toggle"
+                        href="#"
+                        role="button" tabindex="3">
+                            <i class="icon-menu">
+                                <span class="hide">menu</span>
+                            </i>
+                        </a>
                     </div>
 
                 </form>
